--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,4 @@
 {
-    "authToken": "123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11",
-    "owner": 34509246
+    "authToken": "1804335150:AAHQx0uydeL_eXv0C2IZi2Nu6wp_vCB5V8Y",
+    "owner": 1371803729
 }
