--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "keywords": ["TERMINAL"],
   "env": {
   },
-  "website": "https://github.com/oktest145/shellbot",
-  "repository": "https://github.com/oktest145/shellbot",
+  "website": "https://github.com/mr-wh1tehat/shellheroku",
+  "repository": "https://github.com/mr-wh1tehat/shellheroku",
   "stack": "container"
  }
